--- a/style/index.css
+++ b/style/index.css
@@ -50,6 +50,10 @@ button{
 
 /*------ header -------*/
 
+header{
+	display: block;
+}
+
 #header-main{
 	background-color: #C4D7F2;
 	display: flex;
@@ -79,6 +83,8 @@ button{
 }
 
 #nav-header-menu{
+	position: absolute;
+	top: 79px;
 	background: rgba(196, 215, 242, 0.95);
 	padding: 10px 0px;
 }
@@ -106,7 +112,7 @@ button{
 }
 
 #search-bar{
-	display: none;
+	background: rgba(196, 215, 242, 0.95);
 }
 
 /*----- section -----*/
@@ -129,6 +135,9 @@ section{
   .col-t-11 {width: 91.66%;}
   .col-t-12 {width: 100%;}
 
+  header{
+	}
+
   #show-menu{
   	display: none;
   }
@@ -138,11 +147,17 @@ section{
 	}
 
 	#nav-header-menu{
+		position: static;
 		display: flex;
 	}
 
 	#log-sign-in-menu button{
 		display: none;
+	}
+
+	#search-bar{
+		padding-right: 10px;
+		text-align: right;
 	}
 
 
