Last Experiences diseño

--- a/style/last_experiences.css
+++ b/style/last_experiences.css
@@ -52,6 +52,7 @@ h3{
   font-size: 20px;
   color: #FF958C;
   text-align: center;
+  margin: 5px auto;
 }
 
 h4{
@@ -85,7 +86,17 @@ p{
   font-size: 14px;
   line-height: 18px;
   color: #FDFCEC;
-  text-align: left;
+  text-align: center;
+  margin: auto;
+}
+
+h5{
+	font-family: Raleway;
+	font-style: italic;
+	font-weight: normal;
+	font-size: 18px;
+	text-align: center;
+  color: #FDFCEC;
   margin: auto;
 }
 
@@ -172,9 +183,92 @@ header{
 	border: 0px;
 }
 
-/*----- section -----*/
-section{
+/*----- MAIN SECTION -----*/
+#main-section{
 	background-color: #1D1E2C;
+}
+
+#filter-bar{
+	display: flex;
+	text-align: center;
+	margin: auto;
+}
+
+#filter-bar img{
+	margin: auto 5px;
+}
+
+#filter-bar div{
+	background-color: #FDFCEC;
+	display: flex;
+	margin: auto 5px;
+  padding: 2px;
+
+}
+
+#filter-input{
+  margin: auto;
+  background: transparent;
+  display:inline-block;
+  color: #1D1E2C;
+  font-size: 18px;
+  border: 0px;
+}
+
+#filter-input:focus{
+  outline: none;
+}
+
+#add-filter-btn{
+	font-size: 13px;
+	background: #FF958C;
+	border: 1px solid #1D1E2C;
+	box-sizing: border-box;
+}
+
+#filters{
+	display: flex;
+	margin: 10px auto;
+}
+
+.filter{
+	display: flex;
+	margin: auto 5px;
+}
+
+.delete-filter{
+	background: #FF958C;
+	border-color: transparent;
+  border-radius: 50px;
+  height: 13px;
+  width: 13px;
+  font-size: 9px;
+  font-style: normal;
+  font-weight: normal;
+  color: #1D1E2C;
+  margin: auto 5px;
+  cursor: pointer;
+}
+
+#experiences{
+	display: inline-block;
+}
+
+.experience{
+  display: flex;
+  margin: auto;
+  padding-bottom: 25px;
+}
+
+.experience div, .experience img{
+  margin: 5px auto;
+}
+
+.experience-l{
+  flex-direction: column;
+}
+.experience-r{
+  flex-direction: column-reverse;
 }
 
 /*----- footer -----*/
@@ -312,6 +406,15 @@ footer{
   .col-11 {width: 91.66%;}
   .col-12 {width: 100%;}
 
+  	h3{
+  		font-size: 32px;
+  	}
+
+  	p{
+  		margin: 0px;
+  		font-size: 22px;
+  		line-height: 120%;
+  	}
 
   	#search-bar{
   		padding-left: 6.00%;
@@ -323,6 +426,32 @@ footer{
 			background-color: #1D1E2C;
 			width: 70%;
 
+		}
+
+		.filter{
+			margin: auto 10px;
+		}
+
+		.experience{
+			margin: 25px auto;
+			flex-direction: row;
+			border-color: #FF958C;
+			border-radius: 1px;
+			border-style: solid;
+			padding: 5px;
+		}
+
+		.experience:hover{
+			background-color: rgba(255, 149, 140, 0.5);
+			transition: 0.1s;
+		}
+
+		.experience-l div h3, .experience-l div p{
+			text-align: left;
+		}
+
+		.experience-r div h3, .experience-r div p{
+			text-align: right;
 		}
 
   }
