--- a/style/index.css
+++ b/style/index.css
@@ -42,7 +42,7 @@ h1 {
   text-align: center;
   letter-spacing: -0.02em;
   color: #FF958C;
-  padding: 15px;
+  padding: 30px;
 }
 
 h3{
@@ -268,6 +268,10 @@ footer{
   	flex-wrap: wrap;
 	}
 
+	h1{
+		font-size: 35px;
+	}
+
   #show-menu{
   	display: none;
   }
@@ -279,6 +283,10 @@ footer{
 	#nav-header-menu{
 		position: static;
 		display: flex;
+	}
+
+	#nav-header-menu a{
+		font-size: 18px;
 	}
 
 	#log-sign-in-menu button{
@@ -312,17 +320,28 @@ footer{
   .col-11 {width: 91.66%;}
   .col-12 {width: 100%;}
 
-
-  	#search-bar{
-  		padding-left: 6.00%;
-  		padding-right: 2.33%;
-  	}
-
-	  #search-input{
-			display: flex;
-			background-color: #1D1E2C;
-			width: 70%;
-
-		}
-
+  header button{
+  	font-size: 18px;
+    line-height: 28px;
   }
+
+  h1{
+  	font-size: 42px;
+  }
+
+  #nav-header-menu a{
+  	font-size: 20px;
+  }
+
+	#search-bar{
+		padding-left: 6.00%;
+		padding-right: 2.33%;
+	}
+
+  #search-input{
+		display: flex;
+		background-color: #1D1E2C;
+		width: 70%;
+
+	}
+}
