--- a/style/index.css
+++ b/style/index.css
@@ -6,7 +6,7 @@
 - Granate raro no sé: #B6244F
 */
 
-/*----- section -----*/
+/*----- MAIN SECTION -----*/
 section{
 	background-color: #1D1E2C;
 }
@@ -21,8 +21,4 @@ section{
   /* For desktop: */
 
 }
-=======
 
-
-}
->>>>>>> Stashed changes
