--- a/style/common.css
+++ b/style/common.css
@@ -172,7 +172,46 @@ header{
   background-color: #FDFCEC;
   border: 0px;
 }
+.modal{
 
+    position: absolute;
+    width: 1012px;
+    height: 803px;
+    left: 0px;
+    top: 0px;
+    background: #1D1E2C;
+    border: 7px solid #FF958C;
+    box-sizing: border-box;
+}
+.modal-container-signup {
+
+    position: absolute;
+    width: 1012px;
+    height: 803px;
+    left: 215px;
+    top: 45px;
+}
+
+.id-button-submit{
+    display:  flex;
+    position: absolute;
+    width: 146px;
+    height: 40px;
+    left: 433px;
+    top: 701px;
+    background: #B6244F;
+    border-radius: 50px;
+}
+
+.id-button-close{
+
+    position: absolute;
+    width: 43px;
+    height: 40px;
+    left: 920px;
+    top: 37px;
+    background: #FF958C;
+}
 
 /*------ FOOTER -------*/
 .clearfix::after {
