--- a/style/about.css
+++ b/style/about.css
@@ -1,30 +1,60 @@
-#image_about{
-    float:left;
-    vertical-align: baseline;
-    width: 326px;
-    height: 412px;
-    left: 68px;
-    top: 287px;
-    clear: both;
-}
-
-#about_text{
-    text-align:left;
-    float:right;
-    margin: 0px;
-    font-size: 22px;
-    line-height: 120%;
-    vertical-align: baseline;
-}
-
-section{
-    background-color: #1D1E2C;
-    padding-bottom: 10%;
-
-}
-
 .clearfix_about::after {
     content: "";
     clear: both;
     display: table;
+}
+
+#image_about{
+    width: 65%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 5%;
+    display: block;
+}
+
+#about_text{
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    text-align:center;
+    font-size: 22px;
+}
+
+section{
+    background-color: #1D1E2C;
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-bottom: 5%;
+    margin: auto;
+}
+
+@media only screen and (min-device-width: 601px) {
+
+}
+
+@media only screen and (min-device-width: 769px) {
+    #image_about{
+        float:left;
+        vertical-align: baseline;
+        width: 25%;
+        padding-left: 10%;
+        padding-right: 10%;
+        clear: both;
+    }
+
+    #about_text{
+        text-align:left;
+        float:right;
+        margin: 0px;
+        font-size: 22px;
+        line-height: 120%;
+        vertical-align: baseline;
+    }
+
+    section{
+        padding-left: 10%;
+        padding-right: 10%;
+        padding-bottom: 5%;
+    }
 }
