--- a/style/common.css
+++ b/style/common.css
@@ -83,6 +83,15 @@ button{
   cursor: pointer;
 }
 
+.big-button {
+	border: none;
+	border-radius: 20px;
+	font-size: 21.8px;
+	color: black;
+	background-color: #FF958C;
+  margin: auto;
+}
+
 p{
   font-style: italic;
   font-weight: normal;
@@ -450,4 +459,3 @@ footer{
         text-align: right;
     }
 }
-
