--- a/style/profile.css
+++ b/style/profile.css
@@ -5,7 +5,9 @@
 - Piel de limón: #FDFCEC
 - Granate raro no sé: #B6244F
 */
-
+#nav-header-menu {
+	display:  none
+}
 /*----- MAIN SECTION -----*/
 section{
 	background-color: #1D1E2C;
@@ -21,52 +23,50 @@ section{
 	display: flex;
 	flex-direction: column;
 	margin: 3.5% auto;
+	overflow: scroll;
 }
 
 #pfp {
-	width: 17.5vh;
+	width: 100px;
 	margin: 20px auto 10px auto;
 }
 
 #profile p {
 	color: black;
-	font-size: 18px;
+	font-size: 16px;
 	text-align: center;
+	line-height: 26px
 }
 
-br {
-	margin-bottom: 25px
+.default {
+	margin-bottom: 15px
 }
 
-#br-interests {
-	margin-bottom: 12px
+#br-interests1, #br-interests2 {
+	display: none
 }
 
-.button-profile {
-	height: 3.7vh;
-	border: none;
-	border-radius: 20px;
-	font-size: 21.8px;
-	color: black;
-	background-color: #FF958C;
-	position: absolute;
-	bottom: 0px
-}
-
-.not-bot {
-	position: inherit;
-	bottom: auto;
-	margin: 10px auto;
+.big-button {
+	height: 22px;
+	font-size: 16px;
+	margin: 0px auto 10px
 }
 
 #interests {
 	display: flex;
+	flex-direction: column;
 }
 
+.column {
+	width: 90%;
+	display: flex;
+	flex-direction: row;
+	margin: auto;
+}
 
 .interest {
-	width: 7vw;
-	height: 2.7vh;
+	width: 30%;
+	height: 22px;
 	background-color: #FDFCEC;
 	border-radius: 20px;
 	margin: 5px auto;
@@ -80,13 +80,40 @@ br {
 	padding-top: 2px
 }
 
-#br-button {
-	margin-bottom: 0px;
+#buttons {
+	margin: auto;
+	text-align: center;
 }
+
 
 
 @media only screen and (min-device-width: 601px) {
   /* For tablets: */
+	#pfp{
+		width: 125px
+	}
+
+	#profile-data {
+		display: grid;
+		grid-template-areas: 'left right';
+	}
+
+	#interests {
+		flex-direction: row;
+		width: 60%;
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+	.column {
+		flex-direction: column;
+	}
+
+	.interest {
+		width: 100%;
+		height: 22px;
+	}
+
 }
 
 
@@ -94,29 +121,41 @@ br {
   /* For desktop: */
 
 	#profile-data {
-		display: inline-flex;
 		margin: auto;
-		gap: 100px;
-		height: 55%
+		grid-column-gap: 75px
 	}
 
-	.column {
-		display: block;
-	  float: left;
-	  margin: auto;
+	#profile-data p {
+		font-size: 18px
 	}
 
-	.profile-art {
-		width: 12vw;
-		height: 100%;
-		position: relative;
+	.big-button {
+		font-size: 22px;
+		height: 33px
 	}
 
-	.button-profile {
-		width: 15vw;
+
+	#interests-p {
+		margin-top: 30px
 	}
 
-	.not-bot {
-		width: 18vw;
+	.interest a {
+		font-size: 18px;
+	}
+
+	#buttons {
+
+	}
+
+}
+
+@media only screen and (min-device-width: 1100px) {
+  /* For desktop: */
+	#profile-data {
+		width: 58.33%;
+	}
+
+	#change-pfp {
+		width: 25%
 	}
 }
