experiences móvil (falta tablet y pc)

--- a/style/common.css
+++ b/style/common.css
@@ -92,6 +92,15 @@ button{
   margin: auto;
 }
 
+.interest {
+	width: 30%;
+	height: 22px;
+	background-color: #FDFCEC;
+	border-radius: 20px;
+	margin: 5px auto;
+	text-align: center;
+}
+
 p{
   font-style: italic;
   font-weight: normal;
