--- a/style/plan.css
+++ b/style/plan.css
@@ -10,6 +10,8 @@
 section{
 	background-color: #1D1E2C;
 	padding-bottom: 25%;
+	display: block;
+	text-align: center;
 }
 
 section input{
@@ -18,6 +20,18 @@ section input{
 	border: 0px;
 	margin: 5px auto;
 	font-size: 20px;
+}
+
+h3{
+	margin: auto;
+}
+
+h4{
+	transform: translate(-3.33%);
+}
+
+h5{
+	font-size: 12px;
 }
 
 #budget-frm{
@@ -37,6 +51,15 @@ section input{
 	margin: auto;
 	text-align: center;
 	padding-bottom: 20px;
+}
+
+#search-btn{
+	margin: 20px auto;
+	background: #B6244F;
+	border-radius: 20.3125px;
+	color: #FDFCEC;
+	font-size: 18px;
+	padding: 10px 20px;
 }
 
 
