--- a/style/common.css
+++ b/style/common.css
@@ -325,6 +325,73 @@ footer{
     flex-direction: column-reverse;
 }
 
+.comment-frm{
+  background: #FDFCEC;
+  border-radius: 50px;
+  display: flex;
+  margin: auto;
+  padding: 5px;
+
+}
+
+.comment-input{
+  margin: auto;
+  background: transparent;
+  display:inline-block;
+  font-size: 20px;
+  border: 0px;
+  color: #1D1E2C;
+}
+
+.comment-input:focus{
+  outline: none;
+}
+
+.send-btn{
+  margin: auto 5px auto auto;
+  cursor: pointer;
+}
+
+/*--------POPUPS---------*/
+.popup {
+  border: 6px solid #FF958C;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #1D1E2C;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  overflow: scroll;
+	scrollbar-width: thin;
+	scrollbar-color: rgba(255,255,255,0.25) transparent;
+}
+
+.title-exit {
+  display: flex;
+  position: relative;
+  width: 100%
+}
+
+.title-exit h3{
+  font-weight: bold;
+  font-size: 24px;
+  margin: 20px auto
+}
+
+.exit-button {
+  position: absolute;
+  right: 9px;
+  top: 12px;
+  width: 30px;
+  height: 30px;
+  background-color: #FF958C;
+  border: none;
+  border-radius: 10px;
+  color: black;
+}
+
 @media only screen and (min-device-width: 601px) {
     /* For tablets: */
     .col-t-1 {width: 8.33%;}
